zig/zig-plugin/gen/com/github/zigzen/lang/parser/ZigParser.java
// This is a generated file. Not intended for manual editing.
package com.github.zigzen.lang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static com.github.zigzen.lang.psi.ZigTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class ZigParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, EXTENDS_SETS_);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return Root(b, l + 1);
  }

  public static final TokenSet[] EXTENDS_SETS_ = new TokenSet[] {
    create_token_set_(ADDITION_EXPR, ASM_EXPR, ASSIGN_EXPR, BITWISE_EXPR,
      BIT_SHIFT_EXPR, BLOCK_EXPR, BOOL_AND_EXPR, BOOL_OR_EXPR,
      COMPARE_EXPR, CURLY_SUFFIX_EXPR, ERROR_UNION_EXPR, EXPR,
      FOR_EXPR, FOR_TYPE_EXPR, GROUPED_EXPR, IF_EXPR,
      IF_TYPE_EXPR, LABELED_TYPE_EXPR, LOOP_EXPR, LOOP_TYPE_EXPR,
      MULTIPLY_EXPR, PREFIX_EXPR, PRIMARY_EXPR, PRIMARY_TYPE_EXPR,
      SUFFIX_EXPR, SWITCH_EXPR, TYPE_EXPR, WHILE_CONTINUE_EXPR,
      WHILE_EXPR, WHILE_TYPE_EXPR),
  };

  /* ********************************************************** */
  // MultiplyExpr (AdditionOp MultiplyExpr)*
  public static boolean AdditionExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ADDITION_EXPR, "<addition expr>");
    r = MultiplyExpr(b, l + 1);
    r = r && AdditionExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AdditionOp MultiplyExpr)*
  private static boolean AdditionExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AdditionExpr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AdditionExpr_1", c)) break;
    }
    return true;
  }

  // AdditionOp MultiplyExpr
  private static boolean AdditionExpr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionExpr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AdditionOp(b, l + 1);
    r = r && MultiplyExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // PLUS
  //   | MINUS
  //   | PLUS2
  //   | PLUSPERCENT
  //   | MINUSPERCENT
  //   | PLUSPIPE
  //   | MINUSPIPE
  public static boolean AdditionOp(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AdditionOp")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ADDITION_OP, "<addition op>");
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    if (!r) r = consumeToken(b, PLUS2);
    if (!r) r = consumeToken(b, PLUSPERCENT);
    if (!r) r = consumeToken(b, MINUSPERCENT);
    if (!r) r = consumeToken(b, PLUSPIPE);
    if (!r) r = consumeToken(b, MINUSPIPE);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // KEYWORD_ADDRSPACE LPAREN Expr RPAREN
  public static boolean AddrSpace(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AddrSpace")) return false;
    if (!nextTokenIs(b, KEYWORD_ADDRSPACE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, KEYWORD_ADDRSPACE, LPAREN);
    r = r && Expr(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ADDR_SPACE, r);
    return r;
  }

  /* ********************************************************** */
  // LBRACKET Expr (COLON Expr)? RBRACKET
  public static boolean ArrayTypeStart(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && Expr(b, l + 1);
    r = r && ArrayTypeStart_2(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, ARRAY_TYPE_START, r);
    return r;
  }

  // (COLON Expr)?
  private static boolean ArrayTypeStart_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart_2")) return false;
    ArrayTypeStart_2_0(b, l + 1);
    return true;
  }

  // COLON Expr
  private static boolean ArrayTypeStart_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "ArrayTypeStart_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && Expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // COLON StringList
  public static boolean AsmClobbers(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmClobbers")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && StringList(b, l + 1);
    exit_section_(b, m, ASM_CLOBBERS, r);
    return r;
  }

  /* ********************************************************** */
  // KEYWORD_ASM KEYWORD_VOLATILE? LPAREN Expr AsmOutput? RPAREN
  public static boolean AsmExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr")) return false;
    if (!nextTokenIs(b, KEYWORD_ASM)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, KEYWORD_ASM);
    r = r && AsmExpr_1(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expr(b, l + 1);
    r = r && AsmExpr_4(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_EXPR, r);
    return r;
  }

  // KEYWORD_VOLATILE?
  private static boolean AsmExpr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr_1")) return false;
    consumeToken(b, KEYWORD_VOLATILE);
    return true;
  }

  // AsmOutput?
  private static boolean AsmExpr_4(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmExpr_4")) return false;
    AsmOutput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // COLON AsmInputList AsmClobbers?
  public static boolean AsmInput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInput")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && AsmInputList(b, l + 1);
    r = r && AsmInput_2(b, l + 1);
    exit_section_(b, m, ASM_INPUT, r);
    return r;
  }

  // AsmClobbers?
  private static boolean AsmInput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInput_2")) return false;
    AsmClobbers(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET IDENTIFIER RBRACKET StringLiteral LPAREN Expr RPAREN
  public static boolean AsmInputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputItem")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, IDENTIFIER, RBRACKET);
    r = r && StringLiteral(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && Expr(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_INPUT_ITEM, r);
    return r;
  }

  /* ********************************************************** */
  // (AsmInputItem COMMA)* AsmInputItem?
  public static boolean AsmInputList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASM_INPUT_LIST, "<asm input list>");
    r = AsmInputList_0(b, l + 1);
    r = r && AsmInputList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AsmInputItem COMMA)*
  private static boolean AsmInputList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AsmInputList_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AsmInputList_0", c)) break;
    }
    return true;
  }

  // AsmInputItem COMMA
  private static boolean AsmInputList_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmInputItem(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // AsmInputItem?
  private static boolean AsmInputList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmInputList_1")) return false;
    AsmInputItem(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // COLON AsmOutputList AsmInput?
  public static boolean AsmOutput(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutput")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && AsmOutputList(b, l + 1);
    r = r && AsmOutput_2(b, l + 1);
    exit_section_(b, m, ASM_OUTPUT, r);
    return r;
  }

  // AsmInput?
  private static boolean AsmOutput_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutput_2")) return false;
    AsmInput(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // LBRACKET IDENTIFIER RBRACKET StringLiteral LPAREN (MINUSRARROW TypeExpr | IDENTIFIER) RPAREN
  public static boolean AsmOutputItem(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem")) return false;
    if (!nextTokenIs(b, LBRACKET)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, LBRACKET, IDENTIFIER, RBRACKET);
    r = r && StringLiteral(b, l + 1);
    r = r && consumeToken(b, LPAREN);
    r = r && AsmOutputItem_5(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, ASM_OUTPUT_ITEM, r);
    return r;
  }

  // MINUSRARROW TypeExpr | IDENTIFIER
  private static boolean AsmOutputItem_5(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem_5")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmOutputItem_5_0(b, l + 1);
    if (!r) r = consumeToken(b, IDENTIFIER);
    exit_section_(b, m, null, r);
    return r;
  }

  // MINUSRARROW TypeExpr
  private static boolean AsmOutputItem_5_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputItem_5_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MINUSRARROW);
    r = r && TypeExpr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (AsmOutputItem COMMA)* AsmOutputItem?
  public static boolean AsmOutputList(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ASM_OUTPUT_LIST, "<asm output list>");
    r = AsmOutputList_0(b, l + 1);
    r = r && AsmOutputList_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AsmOutputItem COMMA)*
  private static boolean AsmOutputList_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!AsmOutputList_0_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "AsmOutputList_0", c)) break;
    }
    return true;
  }

  // AsmOutputItem COMMA
  private static boolean AsmOutputList_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = AsmOutputItem(b, l + 1);
    r = r && consumeToken(b, COMMA);
    exit_section_(b, m, null, r);
    return r;
  }

  // AsmOutputItem?
  private static boolean AsmOutputList_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AsmOutputList_1")) return false;
    AsmOutputItem(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // Expr (AssignOp Expr)?
  public static boolean AssignExpr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "AssignExpr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _COLLAPSE_, ASSIGN_EXPR, "<assign expr>");
    r = Expr(b, l + 1);
    r = r && AssignExpr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }
